--- a/source/frontend/src/block/HowToAdvertise/HowToAdvertise.scss
+++ b/source/frontend/src/block/HowToAdvertise/HowToAdvertise.scss
@@ -1,2 +1,120 @@
 :local {
+	.how-to-advertise {
+	}
+
+	.header {
+		padding: $sizeGrid * 3 0 $sizeGrid * 1;
+
+		.heading {
+			margin-bottom: $sizeGrid;
+		}
+
+		.component-button-main {
+			margin-bottom: $sizeGrid;
+		}
+	}
+
+	.advertisement-steps {
+		@include size(100%, $sizeGrid * 8);
+		display: block;
+		padding-bottom: $sizeGrid;
+	}
+
+	.steps {
+		@extend %reset-list;
+		white-space: nowrap;
+		display: inline-block;
+	}
+
+	.step {
+		@include size($sizeGrid * 15, $sizeGrid * 7);
+		display: inline-block;
+		white-space: nowrap;
+		line-height: $sizeGrid * 7;
+		overflow: hidden;
+		cursor: pointer;
+
+		.button {
+			display: flex;
+			align-items: center;
+		}
+
+		.image {
+			@include size($sizeGrid * 7);
+			position: relative;
+			display: inline-block;
+			vertical-align: top;
+			border-radius: 100%;
+			background: $colorLightGrey;
+			transition: background .2s $easeInOut;
+			border: 4px solid $colorLightGrey;
+		}
+
+		.icon {
+			@include size($sizeGrid * 5);
+		}
+
+		.heading {
+			margin-bottom: $sizeGrid / 4;
+		}
+
+		.content {
+			@include size($sizeGrid * 8, auto);
+			display: inline-block;
+			padding: $sizeGrid;
+			vertical-align: middle;
+			white-space: normal;
+		}
+	}
+
+	// Breakpoints
+	@include respond-to(SMALL) {
+		.how-to-advertise {
+			padding: 0 $sizeGrid*2;
+		}
+
+		.header {
+			padding: 0 0 $sizeGrid*4;
+
+			.heading {
+				margin-bottom: $sizeGrid*2;
+			}
+
+			.component-button-main {
+				margin-bottom: 0;
+			}
+		}
+
+		.advertisement-steps {
+			height: auto;
+			padding-bottom: $sizeGrid * 2;
+		}
+
+		.steps {
+			text-align: center;
+		}
+
+		.step {
+			width: calc(100vw - 16rem);
+			height: auto;
+			white-space: normal;
+
+			.button {
+				display: block;
+			}
+
+			.content {
+				width: 100%;
+				padding: 0 $sizeGrid * 2;
+			}
+
+			.heading {
+				margin-bottom: $sizeGrid/2;
+			}
+
+			.image {
+				@include size($sizeGrid * 8 !important);
+			}
+		}
+	}
 }
