--- a/source/frontend/src/block/VideoWithContent/VideoWithContent.scss
+++ b/source/frontend/src/block/VideoWithContent/VideoWithContent.scss
@@ -3,51 +3,7 @@
 		@include size(100%, auto);
 		position: relative;
 
-		.overrule-overlap {
-			position: relative;
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			align-items: center;
-		}
-
-		.video-description {
-			@include size(50%, auto);
-			order: 1;
-			padding-right: 10%;
-		}
-
-		.video-wrapper {
-			@include size(50%, auto);
-			order: 2;
-
-			.video {
-				@include aspect-ratio(16px, 9px);
-			}
-
-			img {
-				@include size(100%);
-			}
-		}
-
-		.play-button {
-			@include abs-center($sizeGrid * 2);
-			color: $colorWhite;
-		}
-
-		.heading {
-			margin-bottom: $sizeGrid / 4;
-		}
-
-		.copy {
-			margin-bottom: $sizeGrid;
-		}
-
-		.button {
-			margin-bottom: 2px;
-		}
-
-		&.left-aligned {
+		&.alignment-left {
 			.video-description {
 				order: 1;
 				padding-right: 10%;
@@ -58,7 +14,7 @@
 			}
 		}
 
-		&.right-aligned {
+		&.alignment-right {
 			.video-description {
 				order: 2;
 				padding-left: 10%;
@@ -68,22 +24,68 @@
 				order: 1;
 			}
 		}
+	}
 
-		@include respond-to(SMALL) {
-			.overrule-overlap {
-				flex-direction: column;
-			}
+	.overrule-overlap {
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+	}
 
-			.heading {
-				margin-bottom: $sizeGrid * 1.5;
-			}
+	.video-description {
+		@include size(50%, auto);
+		order: 1;
+		padding-right: 10%;
+	}
 
-			.copy {
-				margin-bottom: $sizeGrid * 2;
-			}
+	.video-wrapper {
+		@include size(50%, auto);
+		order: 2;
 
-			&.left-aligned,
-			&.right-aligned {
+		.video {
+			@include aspect-ratio(16px, 9px);
+		}
+
+		img {
+			@include size(100%);
+		}
+	}
+
+	.play-button {
+		@include abs-center($sizeGrid * 2);
+		color: $colorWhite;
+	}
+
+	.heading {
+		margin-bottom: $sizeGrid / 4;
+	}
+
+	.copy {
+		margin-bottom: $sizeGrid;
+	}
+
+	.button {
+		margin-bottom: 2px;
+	}
+
+	@include respond-to(SMALL) {
+		.overrule-overlap {
+			flex-direction: column;
+		}
+
+		.heading {
+			margin-bottom: $sizeGrid * 1.5;
+		}
+
+		.copy {
+			margin-bottom: $sizeGrid * 2;
+		}
+
+		.video-with-content {
+			&.alignment-left,
+			&.alignment-right {
 				.video-wrapper {
 					order: 1;
 					width: 100%;
