--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -70,12 +70,12 @@ figure {
 }
 
 .seng-state-indicator {
-	font: $fontOpenSans;
+	font-family: $fontOpenSans;
+	border: 0;
+	top: auto;
 	bottom: 0;
-	right: 0;
 	background: red;
 	color: white;
 	padding: 10px;
-	position: fixed;
 	z-index: 99999;
 }
