Refactor the hover state Refactor the site frame div Add the blog poster block

--- a/source/frontend/src/asset/style/util/extend/link/link-main.scss
+++ b/source/frontend/src/asset/style/util/extend/link/link-main.scss
@@ -14,11 +14,13 @@
 	}
 
 	// Hover State
-	@include hover() {
-		&:before {
-			width: 100%;
-		}
-	}
+	//&:global .no-touchevents {
+	//	&:local &:hover {
+	//		&:before {
+	//			width: 100%;
+	//		}
+	//	}
+	//}
 
 	@include respond-to(SMALL) {
 		font-size: mobile-size(1.83rem);
