--- a/source/frontend/src/asset/style/layout/site-frame.scss
+++ b/source/frontend/src/asset/style/layout/site-frame.scss
@@ -5,7 +5,15 @@
 	overflow: hidden;
 	max-width: $largeSiteFrame;
 
-	&.windowed {
+	&.is-small {
+		max-width: $smallSiteFrame;
+
+		&.include-padding {
+			max-width: $smallSiteFrame + ($sizeGrid * 2);
+		}
+	}
+
+	&.is-windowed {
 		padding: 0 $sizeGrid * 2;
 	}
 
@@ -15,5 +23,11 @@
 
 	@include respond-to(SMALL) {
 		max-width: 100%;
+
+
+		&.is-small {
+			max-width: 100%;
+			padding: 0 $sizeGridMobile * 2;
+		}
 	}
 }
