--- a/source/frontend/src/block/ImageCallToActions/ImageCallToActions.scss
+++ b/source/frontend/src/block/ImageCallToActions/ImageCallToActions.scss
@@ -77,15 +77,6 @@
 	.transition-in-complete {
 		.call-to-actions-content {
 			font-size: 0;
-
-			a {
-				@include hover() {
-					.copy {
-						opacity: 1;
-						transform: translateY(0);
-					}
-				}
-			}
 		}
 	}
 
@@ -146,5 +137,12 @@
 			@include aspect-ratio(640px, 370px);
 			height: auto;
 		}
+	}
+}
+
+@include hover('.call-to-actions-link') {
+	.copy {
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
