--- a/source/frontend/src/component/button/ButtonCircleArrow/ButtonCircleArrow.scss
+++ b/source/frontend/src/component/button/ButtonCircleArrow/ButtonCircleArrow.scss
@@ -1,5 +1,5 @@
 :local {
-	.button {
+	.button-circle-arrow {
 		display: flex;
 		align-items: center;
 		white-space: nowrap;
@@ -21,18 +21,6 @@
 			}
 			.icon {
 				order: 1;
-			}
-		}
-
-		@include hover() {
-			.icon {
-				svg {
-					circle {
-						stroke-width: 0.5rem;
-						stroke: $colorSecondary;
-						opacity: 1;
-					}
-				}
 			}
 		}
 	}
@@ -82,6 +70,18 @@
 				.label {
 					margin-right: $sizeGrid;
 				}
+			}
+		}
+	}
+}
+
+@include hover('.button-circle-arrow') {
+	.icon {
+		svg {
+			circle {
+				stroke-width: 0.5rem;
+				stroke: $colorSecondary;
+				opacity: 1;
 			}
 		}
 	}
