Refactored the link classes Added the site footer for desktop and tablet

--- a/source/frontend/src/asset/style/asset/link.scss
+++ b/source/frontend/src/asset/style/asset/link.scss
@@ -1,7 +1,4 @@
-.link {
-	@extend %link;
-}
-
-@import 'link/link-icon';
-@import 'link/link-main';
+@import 'link/link-primary';
 @import 'link/link-secondary';
+@import 'link/link-icon';
+@import 'link/link-chevron';
