--- a/source/frontend/src/asset/style/asset/link/link-primary.scss
+++ b/source/frontend/src/asset/style/asset/link/link-primary.scss
@@ -1,6 +1,7 @@
-.link-secondary {
+.link-primary {
 	color: currentColor;
 	text-decoration: none;
+	text-transform: uppercase;
 	position: relative;
 
 	&:before {
