--- a/source/frontend/src/asset/style/type/copy.scss
+++ b/source/frontend/src/asset/style/type/copy.scss
@@ -25,6 +25,10 @@ p {
 	font: 600 2rem / 1.5 $fontOpenSans;
 }
 
+.copy-06 {
+	font: 400 1.2rem / 1.5 $fontOpenSans;
+}
+
 // Breakpoints
 @include respond-to(XX_LARGE) {
 	.copy-01 {
