--- a/source/frontend/src/block/HeroMain/HeroMainSlide/HeroMainSlide.scss
+++ b/source/frontend/src/block/HeroMain/HeroMainSlide/HeroMainSlide.scss
@@ -14,9 +14,22 @@
 		overflow: visible;
 
 		a {
-			@extend %link;
-			@extend %link-secondary;
+			font: 400 1.8rem / 1.625 $fontOpenSans;
+			display: inline-block;
 			color: $colorSecondary;
+
+			&:before {
+				@include position(auto, 0, -1px, 0%);
+				@include size(0%, 1px);
+				position: absolute;
+				content: "";
+				background-color: currentColor;
+				transition: width 150ms $easeInOutExpo;
+			}
+
+			@include respond-to(SMALL) {
+				font-size: mobile-size(2.8rem);
+			}
 		}
 	}
 
@@ -136,3 +149,11 @@
 		}
 	}
 }
+
+// Hover State
+@include hover('.content a') {
+	&:before {
+		width: 100%;
+	}
+}
+
