--- a/source/frontend/src/component/button/ButtonCircleIcon/ButtonCircleIcon.scss
+++ b/source/frontend/src/component/button/ButtonCircleIcon/ButtonCircleIcon.scss
@@ -62,10 +62,15 @@
 			content: '';
 		}
 	}
+	@include respond-to(LARGE) {
+		.icon {
+			@include size(30px);
+		}
+	}
 
 	@include respond-to(SMALL) {
 		.icon {
-			@include size($sizeGrid*3);
+			@include size($sizeGrid*2);
 		}
 
 		.label {
