--- a/source/frontend/src/asset/style/util/variables.scss
+++ b/source/frontend/src/asset/style/util/variables.scss
@@ -41,4 +41,4 @@ $colorBorder: #e0e0e0;
 $colorValidationError: red;
 $colorValidationSuccess: $colorTertiary;
 
-$layout: content, menu, header, panel, video-overlay, notification, inlineLoader, pageLoader;
+$layout: content, header-background, menu, header, panel, video-overlay, notification, inlineLoader, pageLoader;
