update the image call to actions Add the breadcrumbs

--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -24,6 +24,7 @@
 @import 'asset/form/input';
 @import 'asset/form/checkbox';
 @import 'asset/scroll-bar';
+@import 'asset/gradient-overlay';
 
 html,
 body {
