--- a/source/frontend/src/asset/style/layout/site-frame.scss
+++ b/source/frontend/src/asset/style/layout/site-frame.scss
@@ -24,10 +24,13 @@
 	@include respond-to(SMALL) {
 		max-width: 100%;
 
-
 		&.is-small {
 			max-width: 100%;
 			padding: 0 $sizeGridMobile * 2;
+
+			&.include-padding {
+				max-width: 100%;
+			}
 		}
 	}
 }
