--- a/source/frontend/src/asset/style/layout/site-frame.scss
+++ b/source/frontend/src/asset/style/layout/site-frame.scss
@@ -2,7 +2,7 @@
 	@include center-block();
 	@include size(100%, auto);
 	position: relative;
-	overflow: hidden;
+	//overflow: hidden;
 	max-width: $largeSiteFrame;
 
 	&.is-small {
