--- a/source/frontend/src/block/NetworkOverview/NetworkOverview.scss
+++ b/source/frontend/src/block/NetworkOverview/NetworkOverview.scss
@@ -24,7 +24,7 @@
 		white-space: nowrap;
 		font-size: 0;
 		display: inline-block;
-		margin-left: -$sizeGrid;
+		//margin-left: -$sizeGrid;
 	}
 
 	.network {
@@ -52,6 +52,11 @@
 		.site-frame {
 			padding: 0 $sizeGridMobile * 2;
 		}
+
+
+		//.network {
+		//	@include size(240px);
+		//}
 
 		.button {
 			display: none;
