Add the filter  content  for desktop and large tablets

--- a/source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
+++ b/source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
@@ -53,14 +53,22 @@
 		position: absolute;
 	}
 
-	@include respond-to(SMALL) {
-		.link {
-			@include aspect-ratio(1px, 1px);
+	@include respond-to(MEDIUM) {
+		.description {
+			width: 80%;
 		}
+	}
 
+	@include respond-to(SMALL) {
 		.description {
 			padding: $sizeGrid *2;
 			width: 90%;
+		}
+	}
+
+	@include respond-to(X_SMALL) {
+		.link {
+			@include aspect-ratio(1px, 1px);
 		}
 	}
 
