--- a/source/frontend/src/block/FilterContent/FilterContent.scss
+++ b/source/frontend/src/block/FilterContent/FilterContent.scss
@@ -1,2 +1,46 @@
 :local {
+	.filter-content {
+		overflow: visible;
+		margin-top: -$sizeGrid * 2;
+	}
+
+	.filter-menu {
+		//padding-bottom: $sizeGrid * 2;
+	}
+
+	.filter-result {
+		padding: $sizeGrid * 1 0;
+		font-size: 0;
+		width: calc(100% + #{$sizeGrid * 2});
+		margin-left: -$sizeGrid;
+	}
+
+	.block {
+		@include size(calc(50% - #{$sizeGrid * 2}), auto);
+		display: inline-block;
+		margin: $sizeGrid;
+	}
+
+	@include respond-to(MEDIUM) {
+		.filter-result {
+			width: calc(100% + #{$sizeGrid});
+			margin-left: -$sizeGrid / 2;
+		}
+
+		.block {
+			@include size(calc(50% - #{$sizeGrid}), auto);
+			margin: $sizeGrid / 2;
+		}
+	}
+
+	@include respond-to(SMALL) {
+		.filter-result {
+			width: 100%;
+		}
+
+		.block {
+			width: 100%;
+			margin-bottom: $sizeGrid
+		}
+	}
 }
