Minor mobile updates

--- a/source/frontend/src/block/FilterContent/FilterContent.scss
+++ b/source/frontend/src/block/FilterContent/FilterContent.scss
@@ -34,6 +34,11 @@
 	}
 
 	@include respond-to(SMALL) {
+		.filter-content {
+			margin-top: 0;
+			padding-top: mobile-size($sizeGrid * 3);
+		}
+
 		.filter-result {
 			width: 100%;
 		}
